--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -32,7 +32,7 @@ services:
       restart_policy:
         condition: on-failure
     ports:
-      - 5601
+      - "5601:{{ elasticsearch_kibana_hostport }}"
     volumes:
       - {{ elasticsearch_logs_path }}:/var/log/kibana
       - {{ elasticsearch_data_path }}:/var/data/kibana
